fix: spacing around elements

--- a/style.css
+++ b/style.css
@@ -1,28 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap');
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
   font-family: "Outfit", sans-serif;
   font-size: 16px;
-  font-style: normal;
+  line-height: 1.5;
   background-color: hsl(30, 54%, 90%);
   color: hsl(30, 10%, 34%);
-  padding: 90px 0;
+  padding: 120px 0;
 }
 
-p {
-  margin: 0;
-  line-height: 1.5;
-}
-
-.container {
-  max-width: 640px;
-  padding: 36px;
+main {
+  max-width: 735px;
+  padding: 40px;
   background-color: hsl(0, 0%, 100%);
   border-radius: 24px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 img,
@@ -33,7 +42,11 @@ img,
 hr {
   color: hsl(30, 18%, 87%);
   border-width: 1px 0px 0px 0px;
-  margin: 32px 0;
+  margin: 26px 0;
+}
+
+hr.taller {
+  margin-top: 30px;
 }
 
 h1,
@@ -43,36 +56,62 @@ h2 {
   color: hsl(24, 5%, 18%);
 }
 
+h2,
+.brown {
+  color: hsl(14, 45%, 36%);
+}
+
+h3,
+.rose li::before {
+  color: hsl(332, 51%, 32%);
+}
+
+h1 {
+  margin: 30px 0 14px;
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 28px;
+  margin: 27px 0 12px;
+}
+
+.nutrition h2 {
+  margin-bottom: 14px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 8px 0;
+}
+
 .prep {
-  padding: 6px 28px 16px;
-  margin: 32px 0;
+  padding: 14px 28px 22px;
+  margin: 32px 0px 24px;
   background-color: hsl(330, 100%, 98%);
 }
 
 .table {
-  margin-top: 20px;
+  margin-top: 22px;
 }
 
 .table div {
   display: flex;
-  padding-left: 32px;
+  padding: 0px 12px 0px 30px;
 }
 
 .table p {
+  flex-basis: 50%;
   flex: 1;
 }
 
 .table hr {
-  margin: 12px 0
+  margin: 12px 0;
 }
 
 .bold {
   font-weight: 700;
-}
-
-h2,
-.brown {
-  color: hsl(14, 45%, 36%);
 }
 
 ul li::before {
@@ -84,17 +123,10 @@ ol li::before {
   counter-increment: ordered;
 }
 
-h3,
-.rose li::before {
-  color: hsl(332, 51%, 32%);
-}
-
 li::before {
   font-weight: 700;
   color: hsl(14, 45%, 36%);
-  margin-left: 6px;
-  margin-top: 3px;
-  position: absolute;
+  min-width: 33px;
 }
 
 ul,
@@ -102,32 +134,59 @@ ol {
   counter-reset: ordered;
   list-style-type: none;
   padding: 0;
-  margin: 0
+  margin-left: 7px;
 }
 
-li p {
-  padding-left: 36px;
-  margin: 12px 0;
+ol {
+  padding-top: 4px;
+}
+
+ul p {
+  margin: 4px 0;
+}
+
+li {
+  display: flex;
+  align-items: center;
+}
+
+ol li {
+  align-items: flex-start;
+  margin-bottom: 8px;
 }
 
 @media (max-width: 500px) {
   body {
-    display: contents;
+    padding: 0;
   }
 
-  .container {
-    width: 100%;
+  main {
     margin: 0;
     border-radius: 0;
     padding: 0;
   }
 
-  .content {
-    padding: 0 36px 36px;
+  img {
+    border-radius: 0;
   }
 
-  img {
-    width: 100%;
-    border-radius: 0;
+  .content {
+    padding: 40px 32px;
+  }
+
+  h1 {
+    margin: 0 0 24px;
+    line-height: 1;
+    font-size: 36px;
+  }
+
+  .prep {
+    padding: 10px 24px 18px;
+    margin: 32px 0px 24px;
+    background-color: hsl(330, 100%, 98%);
+  }
+
+  .nutrition h2 {
+    margin-bottom: 16px;
   }
 }
